# standoff-tools

./: .gitignore  .travis.yml  ChangeLog.md  README.md  StandOff.cabal  changelog.md  package.yaml  stack.yaml  standoff-tools.cabal
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: haskell.yml  test-main.yml
commandline/: owlSchema2csv.hs  standoff.hs
doc/examples/: herder_plastik_1778.TEI-P5.xml.dump.el  rosenkranz_aesthetik_1853.TEI-P5.xml.dump.el
doc/getting-started/: Trawr-Gesang.epilog.csv  Trawr-Gesang.extract.csv  Trawr-Gesang.feature.csv  Trawr-Gesang.minimal.csv  Trawr-Gesang.overlap.csv  Trawr-Gesang.pid.csv  Trawr-Gesang.restricted.csv  Trawr-Gesang.xml  Trawr-Gesang.xml.txt  feature-map.yaml
doc/images/: standoff-pipeline.dia
mappings/: shrink-local.yaml  shrink-tei.yaml  som-tei.yaml
src/: AnnotationData.hs  DumpElParser.hs  Internalize.hs  LineOffsets.hs  ResolveOverlapping.hs  TagSerializer.hs  TextRange.hs  XMLData.hs  XMLOffsets.hs  standoff.hs
src/StandOff/: AnnotationTypeDefs.hs  AttributeSerializer.hs  AttributesMap.hs  DomTypeDefs.hs  EquidistantText.hs  External.hs  Extract.hs  Internalize.hs  LineOffsets.hs  MarkupTree.hs  OffsetMapping.hs  Owl.hs  ResolveOverlapping.hs  ShrinkedText.hs  SourcePosMapping.hs  Splitting.hs  StringLike.hs  Tag.hs  TagSerializer.hs  TagTypeDefs.hs  TextRange.hs  Tree.hs  Utils.hs  XTraverse.hs  XmlParsec.hs
src/StandOff/Data/: Annotation.hs  Tag.hs  TextRange.hs  Tree.hs  XML.hs
src/StandOff/ELisp/: DumpFile.hs
src/StandOff/Internalizer/: Internalize.hs  ResolveOverlapping.hs  TagSerializer.hs
src/StandOff/ParseExternal/: StandoffModeDump.hs
src/StandOff/XML/: AttributeSerializer.hs  LineOffsets.hs  NodeOffsets.hs  TagSerializer.hs
t/: TestMain.hs  TestMarkupRange.hs  TestTextRange.hs  advanced.xml  invalid-tag.xml  simple.xml
test/: TestDataXML.hs  TestInternalizer.hs  TestMain.hs  TestMarkupRange.hs  TestSetup.hs  TestTagSerializer.hs  TestTextRange.hs  simple.xml  simple.xml.dump.el
testsuite/: RealWorldTests.hs.off  TestMain.hs  advanced.equidist.txt  attributes.xml  cdata.xml  charref.xml  comment.xml  element2.xml  entityref.xml  invalid-element.xml  pi.xml  simple.equidist.txt  simple.xml  simple2.xml  simple3.xml
testsuite/Test/StandOff/: DataXML.hs  DomTypeDefs.hs  EquidistantText.hs  Internalizer.hs  InternalizerRW.hs.off  MarkupRange.hs  MarkupTree.hs  ShrinkedText.hs  SourcePosMapping.hs  TagSerializer.hs  TestSetup.hs  TextRange.hs  XmlParsec.hs
testsuite/annotations/: Makefile  charref.end-forbidden.01.internalized.xml  charref.end-forbidden.02.internalized.xml  charref.end-forbidden.03.internalized.xml  charref.end-forbidden.04.internalized.xml  charref.end-forbidden.05.internalized.xml  charref.end-forbidden.csv  charref.move7.01.internalized.xml  charref.move7.02.internalized.xml  charref.move7.03.internalized.xml  charref.move7.04.internalized.xml  charref.move7.05.internalized.xml  charref.move7.06.internalized.xml  charref.move7.07.internalized.xml  charref.move7.08.internalized.xml  charref.move7.09.internalized.xml  charref.move7.10.internalized.xml  charref.move7.11.internalized.xml  charref.move7.12.internalized.xml  charref.move7.13.internalized.xml  charref.move7.14.internalized.xml  charref.move7.15.internalized.xml  charref.move7.16.internalized.xml  charref.move7.17.internalized.xml  charref.move7.csv  charref.start-forbidden.01.internalized.xml  charref.start-forbidden.02.internalized.xml  charref.start-forbidden.03.internalized.xml  charref.start-forbidden.04.internalized.xml  charref.start-forbidden.05.internalized.xml  charref.start-forbidden.06.internalized.xml  charref.start-forbidden.csv  element.end-left-forbidden.01.internalized.xml  element.end-left-forbidden.02.internalized.xml  element.end-left-forbidden.03.internalized.xml  element.end-left-forbidden.04.internalized.xml  element.end-left-forbidden.05.internalized.xml  element.end-left-forbidden.06.internalized.xml  element.end-left-forbidden.07.internalized.xml  element.end-left-forbidden.csv  (+45 more)
testsuite/annotations-shrinked/: Makefile  advanced.shrinked.txt  charref.move16.01.internalized.xml  charref.move16.02.internalized.xml  charref.move16.03.internalized.xml  charref.move16.04.internalized.xml  charref.move16.05.internalized.xml  charref.move16.06.internalized.xml  charref.move16.07.internalized.xml  charref.move16.08.internalized.xml  charref.move16.09.internalized.xml  charref.move16.10.internalized.xml  charref.move16.11.internalized.xml  charref.move16.12.internalized.xml  charref.move16.13.internalized.xml  charref.move16.14.internalized.xml  charref.move16.15.internalized.xml  charref.move16.16.internalized.xml  charref.move16.17.internalized.xml  charref.move16.18.internalized.xml  charref.move16.19.internalized.xml  charref.move16.20.internalized.xml  charref.move16.21.internalized.xml  charref.move16.22.internalized.xml  charref.move16.23.internalized.xml  charref.move16.24.internalized.xml  charref.move16.25.internalized.xml  charref.move16.26.internalized.xml  charref.move16.27.internalized.xml  charref.move16.28.internalized.xml  charref.move16.29.internalized.xml  charref.move16.30.internalized.xml  charref.move16.31.internalized.xml  charref.move16.32.internalized.xml  charref.move16.csv  charref.shrinked.txt  comment.move3.01.internalized.xml  comment.move3.02.internalized.xml  comment.move3.03.internalized.xml  comment.move3.04.internalized.xml  (+37 more)
utils/mappings/: som-tei.yaml
utils/tei/: arrows.js  canvas4tei.xsl  canvasannot.js  jannotation.js  standoff.css  static.js  svg4tei.xsl  svgannot.js
