name:                StandOff
version:             0.1.0.0
synopsis:            Tools for managing stand-off markup.
-- description:         
homepage:            https://github.com/lueck/standoff-tools/
license:             GPL-3
license-file:        LICENSE
author:              Christian Lück
maintainer:          christian.lueck@ruhr-uni-bochum.de
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   TextRange
                   , LineOffsets
                   , XMLData
                   , XMLOffsets
                   , AnnotationData
                   , DumpElParser
                   , Internalize
                   , TagSerializer
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >=4.6 && <4.7, parsec >=3.1 && <3.2
  hs-source-dirs:    src
  default-language:  Haskell2010

Executable standoff
  main-is:           standoff.hs
  build-depends:     base >=4.6 && <4.7, parsec >=3.1 && <3.2
  build-depends:     directory >= 1.2.0.1
  hs-source-dirs:    src
  default-language:  Haskell2010

Test-Suite test-main
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  build-depends:     base >=4.6 && <4.7, parsec >=3.1 && <3.2
  build-depends:     HTF >=0.10.1
  hs-source-dirs:    t, src
  default-language:  Haskell2010
  