name:                StandOff
version:             0.1.0.0
synopsis:            Tools for managing stand-off markup.
-- description:         
homepage:            https://github.com/lueck/standoff-tools/
license:             GPL-3
license-file:        LICENSE
author:              Christian Lück
maintainer:          christian.lueck@ruhr-uni-bochum.de
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   StandOff.Data.TextRange
                   , StandOff.Data.Tree
                   , StandOff.Data.XML
                   , StandOff.XML.LineOffsets
                   , StandOff.XML.NodeOffsets
                   , StandOff.Data.Annotation
                   , StandOff.ELisp.DumpFile
                   , StandOff.Internalizer.Internalize
                   , StandOff.Data.Tag
                   , StandOff.XML.TagSerializer
                   , StandOff.XML.AttributeSerializer
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >=4.6 && <4.7
                   , containers >= 0.5.0.0
                   , parsec >=3.1 && <3.2
                   , text >= 1.2.2.1
                   , uuid >= 1.3.11
                   , aeson
                   , uuid-aeson
  hs-source-dirs:    src
  default-language:  Haskell2010

Executable standoff
  main-is:           standoff.hs
  build-depends:     base >=4.6 && <4.7
                   , containers >= 0.5.0.0
                   , parsec >=3.1 && <3.2
                   , text >= 1.2.2.1
                   , uuid >= 1.3.11
                   , aeson
                   , uuid-aeson
  build-depends:     directory >= 1.2.0.1
                   , optparse-applicative >= 0.12.1.0
                   , transformers
                   , bytestring
                   , template-haskell
  hs-source-dirs:    src
  default-language:  Haskell2010

Test-Suite test-main
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  build-depends:     base >=4.6 && <4.7
                   , containers >= 0.5.0.0
                   , parsec >=3.1 && <3.2
                   , text >= 1.2.2.1
                   , uuid >= 1.3.11
                   , aeson
                   , uuid-aeson
  build-depends:     HTF >=0.10.1
                   , bytestring
                   , template-haskell
  hs-source-dirs:    test, src
  default-language:  Haskell2010
  