name:                StandOff
version:             0.0.2.0
synopsis:            Tools for managing stand-off markup.
homepage:            https://github.com/lueck/standoff-tools/
license:             GPL-3
license-file:        LICENSE
author:              Christian Lück
maintainer:          christian.lueck@ruhr-uni-bochum.de
copyright:           Christian Lück, 2016
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

description:
                     standoff-tools offers a library and a command
                     line program for handling standoff annotations
                     produced with standoff-mode a tagger for GNU
                     Emacs. While standoff-mode produces external
                     markup that references text ranges of the source
                     file by character offsets, standoff-tools offers
                     a command to internalize such stand-off markup
                     into the source file. The source file must be
                     valid XML file, e.g. TEI P5.

                     The library that can be reused for internalizing
                     any external markup, that references the source
                     with character offsets.

library
  exposed-modules:   StandOff.TextRange
                   , StandOff.Tree
                   , StandOff.DomTypeDefs
                   , StandOff.LineOffsets
                   , StandOff.XmlParsec
                   , StandOff.AnnotationTypeDefs
                   , StandOff.Internalize
                   , StandOff.ResolveOverlapping
                   , StandOff.TagTypeDefs
                   , StandOff.TagSerializer
                   , StandOff.AttributeSerializer
                   , StandOff.External.StandoffModeDump
                   , StandOff.Owl
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >=4.9 && <4.10
                   , containers
                   , parsec
                   , text
                   , uuid >= 1.3.11
                   , aeson
                   , uuid-aeson
                   , hxt
                   , cassava
                   , bytestring
  hs-source-dirs:    src
  default-language:  Haskell2010

Executable standoff
  main-is:           standoff.hs
  other-modules:     StandOff.TextRange
                   , StandOff.Tree
                   , StandOff.DomTypeDefs
                   , StandOff.LineOffsets
                   , StandOff.XmlParsec
                   , StandOff.AnnotationTypeDefs
                   , StandOff.Internalize
                   , StandOff.ResolveOverlapping
                   , StandOff.TagTypeDefs
                   , StandOff.TagSerializer
                   , StandOff.AttributeSerializer
                   , StandOff.External.StandoffModeDump
                   , StandOff.Owl
  build-depends:     base >=4.9 && <4.10
                   , containers >= 0.5.0.0
                   , parsec >=3.1
                   , text >= 1.2.2.1
                   , uuid >= 1.3.11
                   , aeson
                   , uuid-aeson
                   , hxt
                   , cassava
                   , bytestring
  build-depends:     directory >= 1.2.0.1
                   , optparse-applicative >= 0.12.1.0
                   , transformers
                   , template-haskell
  hs-source-dirs:    commandline, src
  default-language:  Haskell2010

Test-Suite test-main
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  other-modules:     StandOff.TextRange
                   , StandOff.Tree
                   , StandOff.DomTypeDefs
                   , StandOff.LineOffsets
                   , StandOff.XmlParsec
                   , StandOff.AnnotationTypeDefs
                   , StandOff.Internalize
                   , StandOff.ResolveOverlapping
                   , StandOff.TagTypeDefs
                   , StandOff.TagSerializer
                   , StandOff.AttributeSerializer
                   , StandOff.External.StandoffModeDump
                   , Test.StandOff.DataXML
                   , Test.StandOff.Internalizer
                   , Test.StandOff.MarkupRange
                   , Test.StandOff.TagSerializer
                   , Test.StandOff.External.StandoffModeDump
                   , Test.StandOff.TestSetup
  build-depends:     base  >=4.9 && <4.10
                   , containers >= 0.5.0.0
                   , parsec >=3.1
                   , text >= 1.2.2.1
                   , uuid >= 1.3.11
                   , aeson
                   , uuid-aeson
                   , hxt
                   , cassava
                   , bytestring
  build-depends:     HTF >=0.10.1
                   , template-haskell
  hs-source-dirs:    testsuite, src
  default-language:  Haskell2010
